--- a/supereats web/index.html
+++ b/supereats web/index.html
@@ -1,6 +1,10 @@
 <!--Navigation & Intro-->
 <header>
 
+ <link rel = "stylesheet"
+   type = "text/css"
+   href = "css.css" />
+
 
   <!--Navbar-->
   <nav class="navbar navbar-toggleable-md navbar-dark ">
